--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "express": "^4.18.3",
-    "mongodb": "^5.9.2",
-    "mongoose": "^7.6.9"
+    "express-fileupload": "^1.4.3",
+    "mongodb": "^6.4.0",
+    "mongoose": "^7.6.9",
+    "node-pgm": "^2.0.0"
   },
   "engines": {
     "node": "14.x"
